style fix - address search modal td line gap

--- a/src/component/modal/RecipientsModal.css
+++ b/src/component/modal/RecipientsModal.css
@@ -28,7 +28,7 @@ p.above {
 }
 
 p.below {
-  margin-top: -10px;
+  margin-top: 5px;
   margin-bottom: 0;
   font-size: smaller;
 }
